--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -50,3 +50,7 @@
 /* Social Share
 --------------------------------------------- */
 @import "common/social-share";
+
+/* Footer
+--------------------------------------------- */
+@import "footer/footer";
