--- a/sass/components/common/_categories-list.scss
+++ b/sass/components/common/_categories-list.scss
@@ -38,7 +38,7 @@
   a {
     font-weight: var(--heading-typography-variant);
     text-decoration: none;
-    padding: 0 0 8px;
+    padding: 0 4px 8px;
     color: $wp-meliora__neutral-dark-gray-color;
     word-wrap: normal;
     white-space: nowrap;
