--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -55,6 +55,7 @@
 .c-header__navigation__toggle {
   background-color: transparent;
   color: $wp-meliora__secondary-color;
+  padding: 0;
 }
 
 .c-header__branding__title {
