--- a/sass/components/common/_searchform.scss
+++ b/sass/components/common/_searchform.scss
@@ -25,7 +25,7 @@
 .c-search-form__submit {
   width: 40px;
   height: 40px;
-  background-color: #FFBA9D;
+  background-color: $wp-meliora__primary-color;
   padding: 0;
   display: flex;
   align-items: center;
