--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,7 @@ Tested up to: 5.5.1
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: wp_meliora
+Text Domain: wp-meliora
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
