--- a/sass/layouts/_no-sidebar.scss
+++ b/sass/layouts/_no-sidebar.scss
@@ -2,6 +2,14 @@
   .sidebar {
     display: none;
   }
+
+  .c-post__tags {
+    justify-content: flex-start;
+
+    @include media(laptop) {
+      justify-content: flex-end;
+    }
+  }
 }
 
 
