--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -22,10 +22,11 @@ $color__border-abbr: #666;
 $wp-meliora__primary-color: var(--primary-color);
 $wp-meliora__secondary-color: var(--secondary-color);
 $wp-meliora__tertiary-color: var(--tertiary-color);
+$wp-meliora__quaternary-color: var(--quaternary-color);
 $wp-meliora__main-primary-color: #000000;
-$wp-meliora__main-primary-dark-color: #2B2B2B;
+$wp-meliora__main-primary-dark-color: var(--quaternary-color);
 $wp-meliora__main-primary-light-color: #474747;
-$wp-meliora__neutral-dark-gray-color: #ABABAB;
+$wp-meliora__neutral-dark-gray-color: var(--quaternary-color);
 $wp-meliora__neutral-gray-color: #DFDFDF;
 $wp-meliora__neutral-gray-light-color: #F4F4F4;
 $wp-meliora__neutral-white: #FFFFFF;
