--- a/sass/components/content/_pagination.scss
+++ b/sass/components/content/_pagination.scss
@@ -27,13 +27,15 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 1px solid $wp-meliora__tertiary-color;
+        border: 1px solid $wp-meliora__neutral-gray-light-color;
         color: $wp-meliora__tertiary-color;
         border-radius: $global-radius;
+        background-color: $wp-meliora__neutral-gray-light-color;
 
         &:hover {
-          color: $wp-meliora__neutral-white;
-          background-color: $wp-meliora__tertiary-color;
+          color: $wp-meliora__tertiary-color;
+          background-color: transparent;
+          border-color: $wp-meliora__tertiary-color;
         }
       }
     }
