--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -3,7 +3,7 @@
   white-space: normal;
 }
 
-*:not(h1, h2, h3, h4, h5, h6, b, strong) {
+*:not(h1, h2, h3, h4, h5, h6, b, strong, strong *) {
 	font-weight: var(--text-typography-variant);
 }
 
