--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -89,7 +89,10 @@
     }
 
     &:hover {
-      color: $wp-meliora__primary-color;
+
+      span {
+        color: $wp-meliora__primary-color;
+      }
     }
   }
 }
