--- a/sass/components/content/_post.scss
+++ b/sass/components/content/_post.scss
@@ -128,4 +128,8 @@
   padding-bottom: 24px;
   border-bottom: 1px solid $wp-meliora__neutral-gray-color;
   margin-bottom: 48px;
+
+  .c-post__tags {
+    justify-content: flex-start;
+  }
 }
