--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -18,7 +18,7 @@
       display: none;
       flex-direction: column;
       clear: both;
-      padding: 16px 0;
+      padding: 10px 0;
       top: unset;
       left: unset;
 
@@ -31,7 +31,7 @@
         z-index: 99999;
         flex-direction: column;
         clear: both;
-        padding: 16px 0;
+        padding: 0;
         width: auto;
       }
 
@@ -45,8 +45,7 @@
       }
 
       li {
-        margin-bottom: 11px;
-        margin-right: 0;
+        margin: 0;
         display: flex;
         align-items: center;
 
@@ -78,7 +77,7 @@
       }
 
       a {
-        padding: 5px 20px;
+        padding: 10px 20px;
         text-align: center;
         white-space: nowrap;
       }
@@ -136,6 +135,9 @@
       transition: $global-transition;
       margin-left: 8px;
       transform-origin: center center;
+      font-size: 14px;
+      width: 10px;
+      height: 10px;
     }
 
     &:hover {
