--- a/sass/components/content/_post.scss
+++ b/sass/components/content/_post.scss
@@ -61,7 +61,7 @@
 
 .blog .c-post, .archive .c-post, .search .c-post {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   flex-wrap: wrap;
 
   .c-post__header {
