--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -58,7 +58,7 @@
         &:hover, &:focus-within {
           background-color: $wp-meliora__neutral-gray-light-color;
 
-          a {
+          & > a {
             color: $wp-meliora__main-primary-light-color;
           }
         }
@@ -77,6 +77,7 @@
       }
 
       a {
+        color: $wp-meliora__quaternary-color;
         padding: 10px 20px;
         text-align: center;
         white-space: nowrap;
