--- a/style.css
+++ b/style.css
@@ -998,6 +998,10 @@ textarea {
 	width: 100%;
 }
 
+.site-main__content__title {
+	margin: 0 0 25px;
+}
+
 .site.no-sidebar .sidebar {
 	display: none;
 }
@@ -1237,7 +1241,7 @@ body.error404 {
 	font-weight: var(--heading-typography-variant);
 }
 
-.c-header__branding__title__link:visited {
+.c-header__branding__title__link:visited, .c-header__branding__title__link:focus {
 	color: var(--secondary-color);
 }
 
@@ -1329,7 +1333,7 @@ body.error404 {
 	background-color: #F4F4F4;
 }
 
-.main-navigation ul ul li:hover a, .main-navigation ul ul li:focus-within a {
+.main-navigation ul ul li:hover > a, .main-navigation ul ul li:focus-within > a {
 	color: #474747;
 }
 
@@ -1346,6 +1350,7 @@ body.error404 {
 }
 
 .main-navigation ul ul a {
+	color: var(--quaternary-color);
 	padding: 10px 20px;
 	text-align: center;
 	white-space: nowrap;
@@ -1503,7 +1508,7 @@ body.error404 {
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 1.5em 0 40px;
 }
 
 .page-links {
@@ -1576,7 +1581,7 @@ body.error404 {
 
 .blog .c-post, .archive .c-post, .search .c-post {
 	display: flex;
-	align-items: flex-end;
+	align-items: center;
 	flex-wrap: wrap;
 }
 
@@ -1799,6 +1804,7 @@ body.error404 {
 .comment .comment-author, .comment .comment-author a {
 	font-size: 0.8em;
 	margin-top: 0;
+	text-decoration: none;
 	color: var(--tertiary-color);
 }
 
@@ -1873,6 +1879,7 @@ ol.children {
 	letter-spacing: 0.1em;
 	color: var(--secondary-color);
 	transition: 0.25s;
+	text-decoration: none;
 }
 
 .comment-reply-link:hover {
@@ -1985,6 +1992,20 @@ ol.children {
 
 .comment-edit-link {
 	margin-right: 20px;
+	font-size: 0.8em;
+	margin-top: 0;
+	text-decoration: none;
+	color: var(--tertiary-color);
+}
+
+@media only screen and (min-width: 1140px) {
+	.comment-edit-link {
+		font-size: 1em;
+	}
+}
+
+.comment-edit-link:hover {
+	color: var(--primary-color);
 }
 
 .comment-reply-title {
@@ -2003,7 +2024,7 @@ ol.children {
 
 .form-submit input, .form-submit [type="submit"] {
 	font-weight: var(--heading-typography-variant);
-	padding: 16px 24px;
+	padding: 10px 24px;
 	background-color: #474747;
 	color: #FFFFFF;
 	border-radius: 3px;
