--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -73,7 +73,7 @@
   text-decoration: none;
   font-weight: var(--heading-typography-variant);
 
-  &:visited, &:focus {
+  &:visited, &:focus, &:active {
     color: $wp-meliora__secondary-color;
   }
 
