--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,3 +1,8 @@
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
+
+	&.has-no-scrollbar {
+		height: 100%;
+		overflow: hidden;
+	}
 }
