--- a/sass/components/common/_categories-list.scss
+++ b/sass/components/common/_categories-list.scss
@@ -1,9 +1,10 @@
 .c-categories-list {
   margin: 0 12px;
-  padding: 0 20px;
+  padding: 0;
 
   @include media(laptop) {
     margin: 0;
+    padding: 0 20px;
   }
 }
 
