Increase mobile toggle btn & default secondary color

--- a/style.css
+++ b/style.css
@@ -1233,6 +1233,12 @@ body.error404 {
 	z-index: 10;
 }
 
+.c-header__navigation__toggle span {
+	font-size: 32px;
+	width: 32px;
+	height: 32px;
+}
+
 .c-header__branding__title {
 	margin: 0;
 	color: var(--secondary-color);
