--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -58,6 +58,12 @@
   padding: 0;
   position: relative;
   z-index: 10;
+
+  span {
+    font-size: 32px;
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .c-header__branding__title {
